# ars-solana

./: DESIGN.md  LICENSE  README.md  SPEC.md  package.json  pnpm-lock.yaml  tsconfig.json
python/: .gitignore  README.md  pyproject.toml
python/src/telaro_ars/: __init__.py  abc.py  binding.py  conformance.py  conformance_cli.py  constants.py  events.py  pda.py  settlement.py  state.py  x402.py
python/tests/: test_binding.py  test_conformance.py  test_conformance_cli.py  test_state.py  test_x402.py
src/: binding.ts  client.ts  events.ts  index.ts  ingest.ts  settlement.ts  state.ts  store.ts
tests/: binding.test.ts  client.test.ts  conformance-vectors.json  ingest.test.ts  state.test.ts  store.test.ts
